--- a/rockPaperScissors-index.html
+++ b/rockPaperScissors-index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src = "rock-paper-scissor-app.js" defer></script>
+		<link rel="stylesheet" href="rockPaperScissor.css">
+        <script type="text/javascript" src = "rock-paper-scissor-appV2.js" defer></script>
     </head>
     <body>
-        
-    </body>
+		<div class = "mainDiv">
+			<div class = "childDiv" id="rock">rock</div>
+			<div class = "childDiv" id = "paper">paper</div>
+			<div class = "childDiv" id = "scissor">scissor</div>
+		</div>
+		<div class="resultDiv"></div>
+	</body>
 </html>
